<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/animal_image"
            android:layout_width="match_parent"
            android:layout_height="190dp"/>

        <TextView
            android:id="@+id/animalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:paddingLeft="2dp"
            android:paddingTop="15dp"
            android:text="Name:"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="4dp"
            android:text="Cost:"

            android:textSize="16dp"/>

        <TextView
            android:id="@+id/countryOfOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="4dp"
            android:text="Region of Origin:"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="4dp"
            android:text="Species:"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/lifespan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="4dp"
            android:text="Lifespan:"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/diet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="4dp"
            android:text="Diet:"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:padding="4dp"
            android:text="Description:"
            android:textSize="16dp"/>

        <Button
            android:id="@+id/addAnimalToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="add to cart"
            android:textSize="16dp"/>


    </LinearLayout>
</ScrollView>

