<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_shopping_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project2.ds.project2.ShoppingCartActivity">


        <android.support.v7.widget.RecyclerView
        android:id="@+id/shopping_cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

</android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checkout"
        android:layout_gravity="center"/>


</LinearLayout>
