<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:padding="15dp">

    <ImageView
        android:id="@+id/animal_image"
        android:layout_width="96dp"
        android:layout_height="96dp"/>
    <LinearLayout
        android:id="@+id/name_and_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textStyle="bold"
            android:text="Name"/>

        <TextView
            android:id="@+id/cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19dp"
            android:textStyle="italic"
            android:text="Cost"/>

    </LinearLayout>

</LinearLayout>


